# fpl-mcp

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  Dockerfile  README.md  mcp.json  openapi.json  pyproject.toml  render.yaml
app/api/: main.py  routes.py
app/services/: fpl_client.py
app/tools/: analysis.py
app/util/: cache.py  lookups.py  models.py  settings.py
tests/: test_health.py  test_planner_shape.py
