[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fpl-mcp"
version = "0.1.0"
description = "FastAPI service for FPL MCP"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Your Name" }]
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<0.28",
  "pydantic>=2,<3",
  "pydantic-settings>=2,<3",
  "cachetools>=5,<6",
  "numpy>=1.26,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
  "ruff>=0.5.0",
  "black>=24.0.0",
  "pre-commit>=3.7.0",
  "uvicorn[standard]>=0.30.0",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

